package com.example.cacex.model;

public enum Action {
    NEW,
    UPDATE,
    DELETE
}
