package com.example.cacex.model;

public enum FileCategory {
    TRANSACTION,
    SIDE,
    DERIVED_PORTFOLIO,
    PORTFOLIO_GROUP,
    CHART_OF_ACCOUNTS,
    ACCOUNT
}
